# ConsoleThing

./: .gitignore  CMakeLists.txt  ConsoleThing.c  ConsoleThing.h  ConsoleThing.sln
ConsoleThing/: ConsoleThing.c  ConsoleThing.cpp  ConsoleThing.vcxproj  ConsoleThing.vcxproj.filters  res.rc
